2005-03-20  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/readdir.c (amfs_readdir_browsable): use %p, not %lx.

	* libamu/mount_fs.c (print_nfs_args): print pointer with %p, not
	%lx.

2005-03-18  Erez Zadok  <ezk@cs.sunysb.edu>

	*******************************************************************
	*** Released am-utils-6.1-rc1					***
	*******************************************************************

2005-03-18  Erez Zadok  <ezk@cs.sunysb.edu>

	* conf/transp/transp_tli.c (get_nfs_version): use proper type for
	versout on Solaris (rpcvcers_t).

	* amd/mapc.c (mapc_showtypes): if last map type to print, don't
	append newline or comma to it.

	* libamu/mount_fs.c (print_nfs_args): cast struct netbuf pointer
	to %lx because on Solaris 10 sparc gcc-3.4.3 complains about
	casting it to an int (size is different).

	* configure.in, NEWS: prepare for 6.1-rc1 release.

2005-03-17  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd2ldif.in, ldap.schema: fixes by Adam Morley
	<adam-at-gmi-dot-com> to synchronize what amd2ldif does vs. what
	the ldap.schema expects.

	* amd/map.c (exported_ap_free): We're using a free-list data
	structure and re-using malloc'ed objects.  So, to be safe, memset
	entire structure when it's freed, not just the pointer.
	(umount_exported): bug fix to on-exit code.  Don't run
	am_unmounted() unless unmount_mp() didn't run, since the latter
	already calls am_unmounted().  This way we avoid a double-free
	bug.

2005-03-15  Erez Zadok  <ezk@cs.sunysb.edu>

	* tasks: updates.  Executable maps is supported.  NFSv4 and
	FreeBSD autofs isn't.

	* Makefile.am (EXTRA_DIST): include FAQ in distro.

	* doc/Makefile.am (alldocs): install README.lda and README.osx.

	* FAQ: new file, better late than never.

2005-03-14  Erez Zadok  <ezk@cs.sunysb.edu>

	* scripts/amd2ldif.in: patch to add the amdMapName attribute to
	the amdMapTimestamp object when amd2ldif converts it.  This is
	necessary if you are using type:=auto mounts and want those