@@ -1,3 +1,9 @@
+2005-03-21  Erez Zadok  <ezk@cs.sunysb.edu>
+
+	* include/am_defs.h: undefine "GROUP" so Solaris 10 with gcc-2.96
+	won't complain about a conflict for this definition between
+	<rpcsvc/nis.h> and <sys/acl.h>.
+
 2005-03-20  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* amd/readdir.c (amfs_readdir_browsable): use %p, not %lx.
